# RustPraxisProjekt2024

./: .gitignore  Cargo.toml  präsi-struktur.txt
.github/workflows/: rust.yml
do_not_merge/: notes
docs/protocols/: protocol_22_05_24.txt  protocol_29_05_24.txt
input/: input.txt
src/: graphmodel.rs  lib.rs  main.rs  wavegraph.rs  wavemodel.rs
src/bench/: mod.rs
src/my_folder/: my_file.rs
src/wavegraph/: graphmodel.rs  wavemodel.rs
