[package]
name = "RustPraxisProjekt2024"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6.5"
qwt = "0.1.32"
serde = { version = "1.0.203", features = ["serde_derive"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
derive-new = "0.6.0"
derive_builder = "0.20.0"
derive-getters = "0.4.0"
derive_setters = "0.1.6"
sucds = "0.8.1"
serde_json = "1.0.117"
serde_with = "3.8.1"
toml = "0.8.14"
